# vllm-swift

./: .coverage  .gitignore  CHANGELOG.md  LICENSE  README.md  RELEASING.md  install.sh  pyproject.toml  test_bridge.py
.github/workflows/: ci.yml
homebrew/: vllm-swift.rb
scripts/: bench_throughput.py  bench_vllm_metal.py  build_bottle.sh  install.sh  integration_test.sh  test_brew_commands.sh
swift/: Package.resolved  Package.swift  bridge.h  build.sh
swift/Sources/DFlash/: DFlash+MLXLLM.swift  DFlash.swift  DFlashCore.swift  DFlashDraftBackend.swift  DFlashDraftModel.swift  DFlashEngines.swift  DFlashRuntime.swift  DFlashTargetModelExtensions.swift
swift/Sources/VLLMBridge/: Bridge.swift
swift/Tests/DFlashTests/: DFlashTests.swift
tests/: conftest.py  test_engine_bridge.py  test_init.py  test_platform.py  test_worker.py
vllm_swift/: __init__.py  engine_bridge.py  platform.py  worker.py
vllm_swift_metal/: __init__.py  engine_bridge.py  platform.py  worker.py
