[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "vllm-swift-metal"
version = "0.1.0"
description = "vLLM Metal plugin powered by mlx-swift — high-performance LLM inference on Apple Silicon"
requires-python = ">=3.10"
dependencies = [
    "vllm>=0.19.0",
]

[project.entry-points."vllm.platform_plugins"]
swift_metal = "vllm_swift_metal:register"

[tool.setuptools.packages.find]
include = ["vllm_swift_metal*"]

[tool.ruff]
line-length = 99
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
source = ["vllm_swift_metal"]

[tool.coverage.report]
fail_under = 95
