[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "vllm-swift"
version = "0.2.0"
description = "vLLM Metal plugin powered by mlx-swift — high-performance LLM inference on Apple Silicon"
requires-python = ">=3.10"
dependencies = []  # vLLM installed separately (build from source is complex)

[project.entry-points."vllm.platform_plugins"]
swift = "vllm_swift:register"

[tool.setuptools.packages.find]
include = ["vllm_swift*"]

[tool.ruff]
line-length = 99
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
source = ["vllm_swift"]

[tool.coverage.report]
fail_under = 95
